--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deep Cleaning & Car Polishing Services | Goa</title>
-
     <meta name="description"
         content="Professional deep cleaning and car polishing services in Goa. Eco-friendly products, trained staff. Book your service today!">
     <meta name="keywords"
         content="deep cleaning goa, car polishing goa, home cleaning verna goa, car detailing south goa, akenterprises">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -18,16 +16,15 @@
         rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
-    <!-- <link rel="stylesheet" href="header.css"> -->
 </head>
 
 <body>
-    <!-- Navigation -->
     <nav class="navbar">
         <div class="container nav-container">
-            <a href="index.html" class="logo">
-                <div class="logo-icon-wrapper">
-                    <i class="fa-solid fa-wand-magic-sparkles"></i>
+           <a href="index.html" class="logo">
+                <div >
+                    <!-- <i class="fa-solid fa-wand-magic-sparkles"></i> -->
+                     <img src="assets/AK Enterprise.svg" alt="A.K. Enterprises Logo" style="width:40px;height:40px;">    
                 </div>
                 <div class="logo-text">
                     <span class="logo-title">A.K. Enterprises</span>
@@ -35,57 +32,106 @@
                 </div>
             </a>
             <nav class="nav-links">
-                <a href="" class="nav-link active">Home</a>
+                <a href="index.html" class="nav-link active">Home</a>
                 <a href="home-cleaning.html" class="nav-link">Deep Cleaning</a>
                 <a href="car-polishing.html" class="nav-link">Car Polishing</a>
                 <a href="about.html" class="nav-link">About Us</a>
                 <a href="contact.html" class="nav-link">Contact Us</a>
-                <!-- <a href="tel:+917387257618" class="btn btn-primary nav-btn-desktop">
-                    <i class="fa-solid fa-phone"></i> Call Now
-                </a> -->
             </nav>
-            <button class="menu-toggle">
-                <i class="fas fa-bars"></i>
-            </button>
+            <button class="menu-toggle"><i class="fas fa-bars"></i></button>
         </div>
     </nav>
 
     <main>
-        <section class="hero main-hero" id="hero">
-            <div class="container hero-content">
-                <h1 class="hero-title">
-                    <span class="hero-title-main">Your Trusted Partner for</span>
-                    <span class="hero-highlight">Home & Auto Care</span>
-                </h1>
-                <p class="hero-subtitle">
-                    Professional deep cleaning and expert car polishing & detailing to give your space and vehicle the shine they
-                    deserve.
-                </p>
+        <section class="hero">
+            
+            <div class="hero-image-slider">
+                <img src="assets/deep-cleaning/1.jpg" alt="Deep Cleaning Service 1">
+                <img src="assets/car-polishing/1 - Copy.png" alt="Car Polishing Service 2">
+                <img src="assets/deep-cleaning/3.jpg" alt="Home Interior Cleaning 3">
+                <img src="assets/car-polishing/2 - Copy.png" alt="Vehicle Detailing 4">
+                <img src="assets/deep-cleaning/1.jpg" alt="Deep Cleaning Service 1">
+            </div>
 
+            <div class="container hero-content">
+                <div class="hero-title">
+                    <div class="hero-overlay">
+                        <h1 class="hero-title-main">Our Professional Services</h1>
+                    </div>
+                </div>
                 <div class="service-choice-container">
                     <a href="home-cleaning.html" class="service-choice-card">
-                        <div class="card-icon-wrapper home">
-                            <i class="fa-solid fa-house-chimney"></i>
-                        </div>
-                        <h3 class="card-title">Home Deep Cleaning</h3>
-                        <p class="card-description">Complete cleaning solutions for residential and commercial
-                            properties. Kitchen, bathroom, upholstery, and more.</p>
-                        <span class="card-link">
-                            View Home Services <i class="fa-solid fa-arrow-right"></i>
-                        </span>
+                        <div class="card-icon-wrapper home"><i class="fa-solid fa-house-chimney"></i></div>
+                        <h3 class="card-title">Deep Cleaning Services</h3>
+                        <span class="card-link">Learn More <i class="fa-solid fa-arrow-right"></i></span>
                     </a>
-
                     <a href="car-polishing.html" class="service-choice-card">
-                        <div class="card-icon-wrapper auto">
-                            <i class="fa-solid fa-car"></i>
-                        </div>
+                        <div class="card-icon-wrapper home"><i class="fa-solid fa-car"></i></div>
                         <h3 class="card-title">Car Polishing & Detailing</h3>
-                        <p class="card-description">Restore your vehicle’s showroom shine with car polishing, full body car washing, interior detailing, water spot removal, paint
-                            protection, and more.</p>
-                        <span class="card-link">
-                            View Auto Services <i class="fa-solid fa-arrow-right"></i>
-                        </span>
+                        <span class="card-link">Learn More <i class="fa-solid fa-arrow-right"></i></span>
                     </a>
+                </div>
+
+                
+
+                <div class="hero-slide-text-container">
+                    <p class="hero-slide-text" id="slide-text"></p>
+                </div>
+            </div>
+        </section>
+
+        <section class="about-section">
+            <div class="container">
+                <div class="section-header">
+                    <h2 class="section-title"><span class="section-title-line"></span>About Us<span
+                            class="section-title-line"></span></h2>
+                    <p class="section-subtitle">Proudly serving customers across Goa with dedication and excellence</p>
+                </div>
+                <div class="about-us-container">
+                    <div class="about-image-wrapper">
+                        <div class="about-image-container"><img src="assets/deep-cleaning/1.jpg"
+                                alt="A.K. Enterprises Team"></div>
+                        <div class="about-stats">
+                            <div class="stat-card"><i class="fas fa-users"></i>
+                                <h3>300+</h3>
+                                <p>Happy Clients</p>
+                            </div>
+                            <div class="stat-card"><i class="fas fa-star"></i>
+                                <h3>1+ Years</h3>
+                                <p>Experience</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="about-content">
+                        <h3 class="about-content-title">Your Trusted Service Partner in Goa</h3>
+                        <p class="about-text">At A.K. Enterprises, we are dedicated to providing top-notch deep cleaning
+                            and car polishing services throughout Goa. With years of experience and a team of trained
+                            professionals, we've built our reputation on quality, reliability, and customer
+                            satisfaction.</p>
+                        <div class="about-features">
+                            <div class="feature-item">
+                                <div class="feature-icon"><i class="fas fa-leaf"></i></div>
+                                <div class="feature-text">
+                                    <h4>Eco-Friendly Products</h4>
+                                    <p>We use only environmentally safe cleaning solutions</p>
+                                </div>
+                            </div>
+                            <div class="feature-item">
+                                <div class="feature-icon"><i class="fas fa-certificate"></i></div>
+                                <div class="feature-text">
+                                    <h4>Trained Professionals</h4>
+                                    <p>Our team is skilled and certified in all services</p>
+                                </div>
+                            </div>
+                            <div class="feature-item">
+                                <div class="feature-icon"><i class="fas fa-clock"></i></div>
+                                <div class="feature-text">
+                                    <h4>Timely Service</h4>
+                                    <p>We value your time and deliver on schedule</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -95,30 +141,19 @@
         <div class="container footer-grid">
             <div class="footer-col">
                 <div class="logo">
-                    <div class="logo-icon-wrapper">
-                        <i class="fa-solid fa-wand-magic-sparkles"></i>
-                    </div>
-                    <div class="logo-text">
-                        <span class="logo-title">A.K. Enterprises</span>
-                        <span class="logo-subtitle">Goa</span>
-                    </div>
+                    <div class="logo-icon-wrapper"><i class="fa-solid fa-wand-magic-sparkles"></i></div>
+                    <div class="logo-text"><span class="logo-title">A.K. Enterprises</span><span
+                            class="logo-subtitle">Goa</span></div>
                 </div>
-                <p class="footer-bio">
-                    Your trusted partner for premium home and auto services in Goa.
-                </p>
-                <div class="footer-socials">
-                    <a href="https://www.facebook.com/share/1799nV8MNb" class="social-link" aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a>
-                    <!-- <a href="#" class="social-link" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#" class="social-link" aria-label="Twitter"><i class="fa-brands fa-twitter"></i></a> -->
-                </div>
+                <p class="footer-bio">Your trusted partner for premium home and auto services in Goa.</p>
+                <div class="footer-socials"><a href="https://www.facebook.com/share/1799nV8MNb" class="social-link"
+                        aria-label="Facebook"><i class="fa-brands fa-facebook-f"></i></a></div>
             </div>
             <div class="footer-col">
                 <h3 class="footer-col-title">Services</h3>
                 <ul class="footer-links">
                     <li><a href="home-cleaning.html">Home Deep Cleaning</a></li>
                     <li><a href="car-polishing.html">Car Polishing</a></li>
-                    <!-- <li><a href="home-cleaning.html#services">Upholstery Cleaning</a></li>
-                    <li><a href="car-polishing.html#auto-services">Ceramic Coating</a></li> -->
                 </ul>
             </div>
             <div class="footer-col">
@@ -140,20 +175,16 @@
         </div>
         <div class="footer-copyright">
             <p>© <span id="current-year"></span> A.K. Enterprises. All rights reserved.</p>
-            <p>Developed by <a href="https://www.growtez.com" target="_blank"> <u>Growtez</u></a></p>
+            <p>Developed by <a href="https://www.growtez.com" target="_blank"><u>Growtez</u></a></p>
         </div>
     </footer>
 
     <div class="floating-buttons">
         <a href="https://wa.me/+919860326361?text=Hi!%20I%20would%20like%20to%20book%20a%20service." target="_blank"
-            class="float-btn whatsapp-btn" aria-label="Message on WhatsApp">
-            <i class="fa-brands fa-whatsapp"></i>
-            <span class="float-tooltip">Message on WhatsApp</span>
-        </a>
-        <a href="tel:+919860326361" class="float-btn call-btn" aria-label="Call Now">
-            <i class="fa-solid fa-phone"></i>
-            <span class="float-tooltip">Call Now</span>
-        </a>
+            class="float-btn whatsapp-btn" aria-label="Message on WhatsApp"><i class="fa-brands fa-whatsapp"></i><span
+                class="float-tooltip">Message on WhatsApp</span></a>
+        <a href="tel:+919860326361" class="float-btn call-btn" aria-label="Call Now"><i
+                class="fa-solid fa-phone"></i><span class="float-tooltip">Call Now</span></a>
     </div>
 
     <script src="./index.js"></script>
